--- a/style.css
+++ b/style.css
@@ -15,10 +15,12 @@
     src: url("./fonts/Inter-Black.woff2") format("woff2"),
          url("./fonts/Inter-Black.woff") format("woff");
 }
-.page{
+.page {
+    margin: 0;
+    padding: 0;
     min-width: 320px;
-    max-width: 1280px;
-    background: #2A2C2F;
+    overflow: hidden;
+    background-color: #2A2C2F;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -30,35 +32,43 @@
 }
 
 .header {
-    max-width: 1184px;
-    height: 52px;
-}
-
-.header__container {
+    margin: 16px 16px 0;
+    min-height: 42px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
+@media (min-width: 768px) {
+    .header {
+        margin: 28px 24px 0;
+        min-height: 52px;
+    }
+}
+
 .header__logo {
-    width: 176px;
-    height: 52px;
-    
+    width: 142px;
+    height: 42px;
+}
+
+@media (min-width: 768px) {
+    .header__logo {
+        width: 176px;
+        height: 52px;
+    }
 }
 
 .header__lang-link {
-    width: 30px;
-    height: 28px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 28px;
-/* identical to box height, or 117% */
-    text-align: right;
-    text-decoration-line: underline;
-    
+    font-size: 18px;
+    line-height: 20px;
+}
+
+@media (min-width: 768px) {
+    .header__lang-link {
+        font-size: 24px;
+        line-height: 28px;
+    }
 }
 
 .lead {
