--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,29 @@
 .header {
-    position: relative;
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
+    margin: 16px 16px 0;
+    min-width: 288px;
+    min-height: 42px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    background-color:  #f2f2f2;
-    overflow: hidden;
-    z-index: 1;
-  }
+}
+
+@media screen and (min-width: 768px) {
+    .header {
+        margin: 28px 24px 0;
+        min-width: 720px;
+        min-height: 52px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .header {
+        margin: 28px 48px 0;
+        min-width: 928px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .header {
+        min-width: 1184px;
+    }
