--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,15 @@
 .page {
-    min-width: 1100px;
-    max-width: 1600px;
-    margin: 0 auto;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  min-width: 320px;
+  overflow: hidden;
+  background-color: #2A2C2F;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%; 
+  text-rendering: optimizeLegibility;
+  color:#fff;
+}
