--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,26 +1,25 @@
-.footer {
-    margin: 64px auto 24px;
+.places {
+    margin: 64px auto 0;
+    padding: 0;
     max-width: 320px;
-   
 }
 
 @media screen and (min-width: 768px) {
-    .footer {
-        margin: 88px auto 24px;
+    .places {
+        margin: 88px auto 0;
         max-width: 720px;
-       
     }
 }
 
 @media screen and (min-width: 1024px) {
-    .footer {
-        margin: 92px auto 24px;
+    .places {
+        margin: 92px auto 0;
         max-width: 928px;
     }
 }
 
 @media screen and (min-width: 1280px) {
-    .footer {
-        max-width: 1184px;
+    .places {
+        max-width: 984px;
     }
 }
