--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,4 @@
-.cover__text_subtitle {
+.cover__subtitle {
     margin: 16px 0 0;
     padding: 0;
     font-style: normal;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (min-width: 768px) {
-    .cover__text_subtitle {
+    .cover__subtitle {
         margin: 32px auto 0;
         max-width: 360px;
         font-size: 18px;
