--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,4 +1,4 @@
-.place__text_paragraph {
+.place__paragraph {
     margin: 0;
     padding: 0;
     font-style: normal;
@@ -7,12 +7,12 @@
     line-height: 163%;
 }
 
-.place__text_paragraph:first-of-type {
+.place__paragraph:first-of-type {
     margin: 0 0 25px;
 }
 
 @media screen and (min-width: 1024px) {
-    .place__text_paragraph {
+    .place__paragraph {
         font-size: 18px;
     }
 }
